Fix KDGraph using unsupported .valueOf in JDK 1.4